--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:theme="@style/Theme.BottonNavegantion"
         tools:targetApi="31">
         <activity
+            android:name=".TermicoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EolicoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HidricoActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
